--- a/labelbutton-demo/pom.xml
+++ b/labelbutton-demo/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.vaadin.alump.labelbutton</groupId>
     <artifactId>labelbutton-demo</artifactId>
     <packaging>war</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <name>MyComponent Add-on Demo</name>
 
     <properties>
