--- a/labelbutton-addon/pom.xml
+++ b/labelbutton-addon/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.vaadin.alump.labelbutton</groupId>
 	<artifactId>labelbutton-addon</artifactId>
-	<packaging>jar</packaging>
-	<version>0.1.0</version>
+	<packaging>bundle</packaging>
+	<version>0.1.1</version>
 	<name>LabelButton</name>
 
 	<properties>
@@ -25,24 +25,22 @@
         <Vaadin-Stylesheets>VAADIN/addons/labelbutton/labelbutton.scss</Vaadin-Stylesheets>
 	</properties>
 
-    <!--     
 	<organization>
-		<name>My Name</name>
-		<url>https://github.com/mygithubaccount/MyComponent/</url>
+		<name>Sami Viitanen</name>
+		<url>https://github.com/alump/LabelButton/</url>
 	</organization>
-    
+
 	<scm>
-		<url>git://github.com/mygithubaccount/MyComponent.git</url>
-		<connection>scm:git:git://github.com/mygithubaccount/MyComponent.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:/mygithubaccount/${ComponentClassName}.git</developerConnection>
-		<tag>MyComponent add-on for Vaadin</tag>
+		<url>git://github.com/alump/LabelButton.git</url>
+		<connection>scm:git:git://github.com/alump/LabelButton.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:/alump/LabelButton.git</developerConnection>
+		<tag>LabelButton add-on for Vaadin</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/mygithubaccount/MyComponent/issues</url>
+		<url>https://github.com/alump/LabelButton/issues</url>
 	</issueManagement>
-    -->
 
 	<licenses>
 		<license>
