--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>labelbutton</artifactId>
 	<packaging>pom</packaging>
 	<version>0.1-SNAPSHOT</version>
-	<name>MyComponent Add-on Root Project</name>
+	<name>LabelButton Add-on Root Project</name>
 
 	<modules>
 		<module>labelbutton-addon</module>
