--- a/labelbutton-addon/pom.xml
+++ b/labelbutton-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.alump.labelbutton</groupId>
 	<artifactId>labelbutton-addon</artifactId>
 	<packaging>bundle</packaging>
-	<version>0.1.3</version>
+	<version>0.1.4-SNAPSHOT</version>
 	<name>LabelButton</name>
 
 	<properties>
